tests/type-errors/entrysig_invalid_type.arl
archetype entrysig_invalid_type

contract my_contract {
  entry an_entry(i : int)
}

entry exec () {
  var c : my_contract = @KT1RNB9PXsnp7KMkiMrWNMRzPjuefSWojBAm;

  var e : entrysig<string> = c.an_entry;
  transfer 0tz to entry e(1);
}
